--- a/gb/23/2/28/n13940123.md
+++ b/gb/23/2/28/n13940123.md
@@ -1,78 +1,65 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>中共被指2次干预大选 特鲁多拒绝公开独立调查</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>中共2次干预加国大选 反对党吁公开独立调查</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13222107-shutterstock_1375222112-600x400.jpg" />
-<h6>中共被指于2019年和2021年两次干预加拿大大选。（Shutterstock）
+<h6>中共被指于2019年和2021年两次干预加拿大大选。(Shutterstock)
 </h6>
 <hr>
-<p>【大纪元2023年03月01日讯】（大纪元记者李平多伦多编译报导）周一（2月27日）安省密西沙加一个新闻发布会上，记者两次问到总理<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%89%B9%E9%B2%81%E5%A4%9A.md#1">特鲁多</a>，是否收到过安情局关于自由党华裔国会议员<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%91%A3%E6%99%97%E9%B9%8F.md#1">董晗鹏</a>（Han Dong）受中共资助的警告，他是否允许董参选，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%89%B9%E9%B2%81%E5%A4%9A.md#1">特鲁多</a>没有直接表态。</p>
-<h2>不回应拿种族问题回避</h2>
-<p>面对两次质问，特鲁多都不直接回答问题，而是以种族话题绕开，说应视加拿大华人为完完全全的加拿大人，鼓励华人参与社区，参与国家治理等等。 他说，过去几年因疫情反亚裔种族事件上升，出现少数族裔国家忠诚度方面的担心等。</p>
-<p>特鲁多说，自由党政府一直与国家情报机构有接触，听取情报机构意见等，但情报机构在政治上没有发言权，非民选官员不能对政党指手画脚。他说，自由党非常幸运、非常高兴拥有董这样的党员，不应纵容说他对国家不忠诚的说法。</p>
-<p>作为国家主要情报机构，加拿大安全情报局（CSIS）职责是收集国家安全威胁方面的情报，并向政府提供建议，政府不理睬，安情局也无能为力，不能出面逮捕任何人。</p>
-<p>Global News 2月14日曾报导，安情局曾敦促特鲁多撤销2019年董的党内提名候选人身份，报导援引匿名消息人士称，董是中共加国大选干预中资助成员之一。董作为多伦多Don Valley North选区自由党候选人，连续赢得2019年和2021年国会席位。</p>
-<p>董在周一声明中称，他尊重加拿大民主制度和选举过程的完整性，媒体关于他的报导，他强烈反对，他会全力自我辩护。</p>
+<p>【大纪元2023年03月01日讯】（大纪元记者李平多伦多编译报导）周一（2月27日）加拿大安省密西沙加一个新闻发布会上，记者两次问到总理特鲁多，是否收到过安情局关于自由党华裔国会议员董晗鹏（Han Dong）受中共资助的警告，他是否允许董晗鹏参选，特鲁多没有直接表态。</p>
+<h2>不回应 拿种族问题回避</h2>
+<p>面对两次质问，特鲁多都不直接回答问题，而是以种族话题绕开，说应视加拿大华人为完完全全的加拿大人，鼓励华人参与社区，参与国家治理等等。他说，过去几年因疫情反亚裔种族事件上升，出现少数族裔国家忠诚度方面的担心等。</p>
+<p>特鲁多说，自由党政府一直与国家情报机构有接触，听取情报机构意见等，但情报机构在政治上没有发言权，非民选官员不能对政党指手画脚。他说，自由党非常幸运、非常高兴拥有董晗鹏的党员，不应纵容说他对国家不忠诚的说法。</p>
+<p>作为国家主要情报机构，加拿大安全情报局（CSIS）的职责是收集国家安全威胁方面的情报，并向政府提供建议，政府不理睬，安情局也无能为力，不能出面逮捕任何人。</p>
+<p>Global News 2月14日曾报导，安情局曾敦促特鲁多撤销2019年董晗鹏党内提名候选人身份，报导援引匿名消息人士称，董是中共干预加国大选中资助成员之一。董晗鹏作为多伦多Don Valley North选区自由党候选人，连续赢得2019年和2021年国会席位。</p>
+<p>董晗鹏在周一声明中称，他尊重加拿大民主制度和选举过程的完整性，媒体关于他的报导，他强烈反对，他会全力自我辩护。</p>
 <h2>公开独立调查呼声高涨</h2>
-<p>去年11月，《环球邮报》首次大篇幅曝光加拿大大选中的中共干预以来，不断有媒体连续曝光。环邮当时曝光2019年联邦大选中，中共资助11名候选人，后来多个连续报导中，又援引安情局曝光文件证实中共大选干预。</p>
-<p>目前越来越多人呼吁专门成立一个机构来对此事进行公开调查。新民主党党魁驵勉诚（Jagmeet Singh）在周二当天呼吁展开完全独立非党派调查。他说，虽接受大选结果，但候选人被外国干预事关重大，必须进行透明独立彻查，否则人民对加拿大民主信心危矣。</p>
-<p>驵勉诚表示，面对如此严肃的指控，特鲁多顾左右而言他，轻描淡写不当一回事，他和加拿大人一样深感失望。法登认为，鉴于当前加拿大总体环境，只有公开调查才起作用。</p>
+<p>去年11月，《环球邮报》首次大篇幅曝光加拿大大选中的中共干预以来，不断有媒体连续曝光。《环邮》当时曝光2019年联邦大选中，中共资助11名候选人，后来多个连续报导中，又援引安情局曝光文件证实中共干预大选。</p>
+<p>目前越来越多人呼吁专门成立一个机构来对此事进行公开调查。新民主党党魁驵勉诚（Jagmeet Singh）在周二（2月28日）当天呼吁展开完全独立非党派调查。他说，虽接受大选结果，但候选人被外国干预事关重大，必须进行透明独立彻查，否则人民对加拿大民主信心危矣。</p>
+<p>驵勉诚表示，面对如此严肃的指控，特鲁多顾左右而言他，轻描淡写不当一回事，他和加拿大人一样深感失望。加拿大安全情报局前局长法登（Richard Fadden）认为，鉴于当前加拿大总体环境，只有公开调查才起作用。</p>
 <h2>2021年大选审查小组负责人受质疑</h2>
 <p>加拿大2021年大选审查外国干涉加拿大选举的小组的领头人是前特鲁多基金会主席兼首席执行官罗森伯格（Morris Rosenberg）。</p>
-<p>保守党对此表示不满，并在 2 月 27 日发表声明。“几个月来，贾斯汀·特鲁多一再试图否认、尽量减少和掩盖严重干预加拿大选举的报道，”声明中说，“必须就这项任命提出严肃的问题，以及自由党是否真的认真对待这一对我们民主的威胁。”</p>
-<p>保守党领袖 Pierre Poilievre 发布推文评论说：“特鲁多说我们不应该担心北京干涉我们的（选举），因为他正在起草一份关于外国干涉的报告。谁起草的？特鲁多基金会的前负责人——该基金会从……北京共产党政府的一位官员那里获得了 20 万元的捐款。”</p>
-<p>罗森伯格在 2016 年担任首席执行官时，特鲁多基金会收到了张斌 20 万元捐款，张斌是一位与中国共产党政权有联系的中国富商，他是中国人民政治协商会议第十二届全国委员会委员，是中共政权的政治咨询机构。他曾任中国文化产业协会（CCIA）会长。他在2016 年参加了特鲁多自由党现金换取筹款活动。</p>
-<p>《环球邮报》援引一位不愿透露姓名的国家安全消息人士的话称，2014 年，一名中国外交官指示张斌向特鲁多基金会捐赠 100 万元，北京会报销这笔钱。外交官和张讨论了即将举行的 2015 年联邦大选，以及自由党击败保守党组建政府的可能性。</p>
-<p>大纪元联系了张征求意见，但没有得到回复。</p>
-<p>罗森伯格关于外国干涉 2021 年大选事件的报告现已完成，但尚未向公众开放，而 2019 年的评估则在当年大选后约 13 个月后完成。该小组没有就 2019 年或 2021 年选举期间的外国干涉发表任何声明。</p>
+<p>保守党对此表示不满，并在2月27日发表声明。“几个月来，贾斯汀?特鲁多一再试图否认、尽量减少和掩盖严重干预加拿大选举的报导”，声明中说，“必须就这项任命提出严肃的问题，以及自由党是否真的认真对待这一对我们民主的威胁。”</p>
+<p>保守党领袖博励治（Pierre Poilievre）发布推文评论说：“特鲁多说我们不应该担心北京干涉我们的（选举），因为他正在起草一份关于外国干涉的报告。谁起草的？特鲁多基金会的前负责人——该基金会从……北京共产党政府的一位官员那里获得了20万元的捐款。”</p>
+<p>罗森伯格在2016年担任首席执行官时，特鲁多基金会收到了张斌20万元捐款，张斌是一位与中国共产党政权有联系的中国富商，他是第十二届中共全国政协委员会委员，政协是中共政权的政治咨询机构。他曾任中国文化产业协会（CCIA）会长。他在2016年参加了特鲁多自由党现金筹款活动。</p>
+<p>《环球邮报》援引一位不愿透露姓名的国家安全消息人士的话称，2014年，一名中共外交官指示张斌向特鲁多基金会捐赠100万元，北京会报销这笔钱。外交官和张讨论了即将举行的2015年联邦大选，以及自由党击败保守党组建政府的可能性。</p>
+<p>大纪元联系了张斌征求意见，但没有得到回复。</p>
+<p>罗森伯格关于外国干涉2021年大选的报告称，外国干预没有影响到大选的公正性。报告中指保守党候选人成为亲北京虚假信息战的攻击目标，但很难评估造成的影响。反对党对报告的可靠程度存疑，认为罗森博格不适合负责调查工作。保守党、新民主党和魁北克党团要求对中国干预活动及影响进行独立、公开的调查。</p>
 <p>罗森伯格和总理办公室均未回复大纪元的置评请求。</p>
-<p>责任编辑：文风</p>
-
-<hr>
-
-
+<p>责任编辑：文风#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926593.md#1">中共干扰选举疑有5年 加拿大政府未防范</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13931371.md#1">消息：加国情报局曾警告特鲁多小心陈国治</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13934288.md#1">加拿大安全情报局曝光中共渗透商界细节</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/21/n13934975.md#1">加国会委员会扩大调查外国干预大选</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939555.md#1">中共干预加国大选 更多涉事政客被披露</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939566.md#1">就北京干涉加国选举 保守党促特鲁多高级顾问作证</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/28/n13940120.md#1">加拿大经济去年第四季停滞不前 加息或暂停</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/28/n13940117.md#1">全民牙保 加拿大牙科协会建议保留私人牙保</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/28/n13939689.md#1">2022年报税季来临 注意事项有哪些？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/28/n13939670.md#1">移民部：电子签耗资数千万 仍难挡犯罪分子</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/9/n13926593.md#1">中共干扰选举疑有5年 加拿大政府未防范</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/16/n13931371.md#1">消息：加国情报局曾警告特鲁多小心陈国治</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/20/n13934288.md#1">加拿大安全情报局曝光中共渗透商界细节</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/21/n13934975.md#1">加国会委员会扩大调查外国干预大选</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/27/n13939555.md#1">中共干预加国大选 更多涉事政客被披露</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/27/n13939566.md#1">就北京干涉加国选举 保守党促特鲁多高级顾问作证</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544412.md#1">加拿大5月商品贸易逆差缩窄至59亿元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544410.md#1">联邦7月起减税 收入逾5.7万者获益最大</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544407.md#1">加拿大移民流出持续攀升 哪些人更倾向离开</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544380.md#1">职涯停滞被忽视 安省员工满意度全国垫底</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/24/n10997801.md#1" target="_blank">林辉：国军重庆号巡洋舰官兵投共后的苦难</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/5/n11633708.md#1" target="_blank">华东师范大学法轮功学员的20年</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/29/n10003609.md#1" target="_blank">大逃港：哪里有自由，哪里就是我的祖国！</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/4/15/n4132079.md#1" target="_blank">从唐山义女“探父蒙难”看古今对比</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924740.md#1">祈祷中神的回应：救人的神已来在人世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938144.md#1">有前世记忆作家：我在母亲怀孕4个月时投胎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923680.md#1">【古道人生】逃难女不甘受辱 一掌击退镖师</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/9/n13798623.md#1">时空可压缩？奇异的梦中之梦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937718.md#1">【未解之谜】植物口香糖？恶魔之果？槟榔的秘密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/28/n13939980.md#1">【全球新闻】CIA局长确认情报 中共4月军援俄？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939632.md#1">【热点互动】白宫重提新冠病毒 中国实验室泄露</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939580.md#1">【直播预告】美众院听证中共对美国的威胁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926811.md#1">在Costco购11种食品和日用品 不太实惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/26/n13938935.md#1">CIA局长：习和军方高层怀疑其入侵台湾能力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938290.md#1">医改遭抗议 中共医保局首次回应“钱哪去了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939296.md#1">韩宜邦向林萱瑜求婚成功 获杨祐宁等艺人助攻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/26/n13938895.md#1">黄子佼晒与孟耿如对话图 曝夫妻俩恢复幽默感</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939607.md#1">遭传与古天乐结婚度蜜月 杨颖诉讼案判决出炉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939192.md#1">顶7度寒流拍落水戏 王瞳黄文星在港边冻到发抖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939573.md#1">晒与周润发爬山合照 江美仪重温两人缘分</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938208.md#1">身高较矮可能活比较久？ 专家解释原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939267.md#1">访问200多名富翁 美作家分享其致富共通点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936587.md#1">提高生存率 1种新方法更准揪出早期癌症</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13934147.md#1">不想待在家？7个适合自由职业者工作的场所</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13930895.md#1">保健子宫 除了穴道按压 睡眠也很重要</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/28/n13940123.htm">中共被指2次干预大选 特鲁多拒绝公开独立调查</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/2/28/n13940123.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545549.md#1">【军事情报局】美对台军售大升级 或逾200亿美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14545002.md#1">【直播】庆美国独立日 华府燃放烟火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540704.md#1">咖啡因会干扰睡眠期间大脑恢复 尤其对年轻人</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/28/n13940123.htm">中共2次干预加国大选 反对党吁公开独立调查</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/2/28/n13940123.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
